Fix dlgView name and link overflow, make it max of 2 line

--- a/style/home.css
+++ b/style/home.css
@@ -126,8 +126,12 @@ body > .main > .link-main {
 #dlgView > div > h3 { 
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
-
 #dlgView > div > div {
     display: flex;
     justify-content: start;
@@ -147,6 +151,7 @@ body > .main > .link-main {
 #dlgView > div > div > button:hover { opacity: 75%;}
 #dlgView > div > div > button:active { opacity: 50%;}
 #dlgView > div > div > #dlgViewCopy { background-color: var(--color); color: var(--background); }
+
 #dlgView > div > div > img {
     width: 24px;
     height: 24px;
@@ -154,7 +159,15 @@ body > .main > .link-main {
 #dlgView > div > div > p {
     color: var(--link);
     text-decoration: underline;
-    cursor:pointer;
+    cursor: pointer;
+    word-break: break-all;
+    white-space: normal;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
 }
 #dlgView > div > div > p:hover { color: purple; }
 #dlgView > div > div > p:active { color: red; }
